DEEP_E3_A_ALEXANDRE_GUETSA/.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
12:43:59 **** Incremental Build of configuration Debug for project projet-f103 ****
make -j4 all 
Building file: ../appli/cadena.c
Invoking: MCU GCC Compiler
C:\Users\Salxs\Documents\ESEO\Cours\Electronique_embarqué\Projet Electronique embarqué\STM32_Workspace\DEEP_E3_A_ALEXANDRE_GUETSA\projet-f103\Debug
arm-none-eabi-gcc -mcpu=cortex-m3 -mthumb -mfloat-abi=soft -DSTM32F1 -DNUCLEO_F103RB -DSTM32F103RBTx -DSTM32 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F103xB -I"C:/Users/Salxs/Documents/ESEO/Cours/Electronique_embarqué/Projet Electronique embarqué/STM32_Workspace/DEEP_E3_A_ALEXANDRE_GUETSA/projet-f103/lib/bsp" -I"C:/Users/Salxs/Documents/ESEO/Cours/Electronique_embarqué/Projet Electronique embarqué/STM32_Workspace/DEEP_E3_A_ALEXANDRE_GUETSA/projet-f103/lib/middleware/MIDI" -I"C:/Users/Salxs/Documents/ESEO/Cours/Electronique_embarqué/Projet Electronique embarqué/STM32_Workspace/DEEP_E3_A_ALEXANDRE_GUETSA/projet-f103/lib/bsp/VL53L0X" -I"C:/Users/Salxs/Documents/ESEO/Cours/Electronique_embarqué/Projet Electronique embarqué/STM32_Workspace/DEEP_E3_A_ALEXANDRE_GUETSA/projet-f103/lib/bsp/MPU6050" -I"C:/Users/Salxs/Documents/ESEO/Cours/Electronique_embarqué/Projet Electronique embarqué/STM32_Workspace/DEEP_E3_A_ALEXANDRE_GUETSA/projet-f103/lib/bsp/iks01a1" -I"C:/Users/Salxs/Documents/ESEO/Cours/Electronique_embarqué/Projet Electronique embarqué/STM32_Workspace/DEEP_E3_A_ALEXANDRE_GUETSA/projet-f103/lib/bsp/iks01a1/Common" -I"C:/Users/Salxs/Documents/ESEO/Cours/Electronique_embarqué/Projet Electronique embarqué/STM32_Workspace/DEEP_E3_A_ALEXANDRE_GUETSA/projet-f103/lib/bsp/iks01a1/hts221" -I"C:/Users/Salxs/Documents/ESEO/Cours/Electronique_embarqué/Projet Electronique embarqué/STM32_Workspace/DEEP_E3_A_ALEXANDRE_GUETSA/projet-f103/lib/bsp/iks01a1/lis3mdl" -I"C:/Users/Salxs/Documents/ESEO/Cours/Electronique_embarqué/Projet Electronique embarqué/STM32_Workspace/DEEP_E3_A_ALEXANDRE_GUETSA/projet-f103/lib/bsp/iks01a1/lps22hb" -I"C:/Users/Salxs/Documents/ESEO/Cours/Electronique_embarqué/Projet Electronique embarqué/STM32_Workspace/DEEP_E3_A_ALEXANDRE_GUETSA/projet-f103/lib/bsp/iks01a1/lps25hb" -I"C:/Users/Salxs/Documents/ESEO/Cours/Electronique_embarqué/Projet Electronique embarqué/STM32_Workspace/DEEP_E3_A_ALEXANDRE_GUETSA/projet-f103/lib/bsp/iks01a1/lsm6ds0" -I"C:/Users/Salxs/Documents/ESEO/Cours/Electronique_embarqué/Projet Electronique embarqué/STM32_Workspace/DEEP_E3_A_ALEXANDRE_GUETSA/projet-f103/lib/bsp/iks01a1/lsm6ds3" -I"C:/Users/Salxs/Documents/ESEO/Cours/Electronique_embarqué/Projet Electronique embarqué/STM32_Workspace/DEEP_E3_A_ALEXANDRE_GUETSA/projet-f103/lib/bsp/tft_ili9341" -I"C:/Users/Salxs/Documents/ESEO/Cours/Electronique_embarqué/Projet Electronique embarqué/STM32_Workspace/DEEP_E3_A_ALEXANDRE_GUETSA/projet-f103/lib/bsp/tft_pcd8544" -I"C:/Users/Salxs/Documents/ESEO/Cours/Electronique_embarqué/Projet Electronique embarqué/STM32_Workspace/DEEP_E3_A_ALEXANDRE_GUETSA/projet-f103/lib/bsp/MCP23S17" -I"C:/Users/Salxs/Documents/ESEO/Cours/Electronique_embarqué/Projet Electronique embarqué/STM32_Workspace/DEEP_E3_A_ALEXANDRE_GUETSA/projet-f103/lib/hal/inc" -I"C:/Users/Salxs/Documents/ESEO/Cours/Electronique_embarqué/Projet Electronique embarqué/STM32_Workspace/DEEP_E3_A_ALEXANDRE_GUETSA/projet-f103/lib/bsp/Common" -I"C:/Users/Salxs/Documents/ESEO/Cours/Electronique_embarqué/Projet Electronique embarqué/STM32_Workspace/DEEP_E3_A_ALEXANDRE_GUETSA/projet-f103/lib/bsp/lcd2x16" -I"C:/Users/Salxs/Documents/ESEO/Cours/Electronique_embarqué/Projet Electronique embarqué/STM32_Workspace/DEEP_E3_A_ALEXANDRE_GUETSA/projet-f103/lib/bsp/MLX90614" -I"C:/Users/Salxs/Documents/ESEO/Cours/Electronique_embarqué/Projet Electronique embarqué/STM32_Workspace/DEEP_E3_A_ALEXANDRE_GUETSA/projet-f103/lib/bsp/MatrixKeyboard" -I"C:/Users/Salxs/Documents/ESEO/Cours/Electronique_embarqué/Projet Electronique embarqué/STM32_Workspace/DEEP_E3_A_ALEXANDRE_GUETSA/projet-f103/lib/bsp/MatrixLed" -I"C:/Users/Salxs/Documents/ESEO/Cours/Electronique_embarqué/Projet Electronique embarqué/STM32_Workspace/DEEP_E3_A_ALEXANDRE_GUETSA/projet-f103/lib/CMSIS/core" -I"C:/Users/Salxs/Documents/ESEO/Cours/Electronique_embarqué/Projet Electronique embarqué/STM32_Workspace/DEEP_E3_A_ALEXANDRE_GUETSA/projet-f103/lib/CMSIS/device" -I"C:/Users/Salxs/Documents/ESEO/Cours/Electronique_embarqué/Projet Electronique embarqué/STM32_Workspace/DEEP_E3_A_ALEXANDRE_GUETSA/projet-f103/lib/middleware/FatFs" -I"C:/Users/Salxs/Documents/ESEO/Cours/Electronique_embarqué/Projet Electronique embarqué/STM32_Workspace/DEEP_E3_A_ALEXANDRE_GUETSA/projet-f103/lib/middleware/FatFs/src" -I"C:/Users/Salxs/Documents/ESEO/Cours/Electronique_embarqué/Projet Electronique embarqué/STM32_Workspace/DEEP_E3_A_ALEXANDRE_GUETSA/projet-f103/lib/middleware/FatFs/src/drivers" -I"C:/Users/Salxs/Documents/ESEO/Cours/Electronique_embarqué/Projet Electronique embarqué/STM32_Workspace/DEEP_E3_A_ALEXANDRE_GUETSA/projet-f103/appli"  -Og -g3 -Wall -Wextra -Wconversion -fmessage-length=0 -ffunction-sections -fdata-sections -c -MMD -MP -MF"appli/cadena.d" -MT"appli/cadena.o" -o "appli/cadena.o" "../appli/cadena.c"
../appli/cadena.c: In function 'CADENA_state_machine':
../appli/cadena.c:34:17: warning: initialization makes integer from pointer without a cast [-Wint-conversion]
  char message = CADENA_recuperation_message;
                 ^~~~~~~~~~~~~~~~~~~~~~~~~~~
../appli/cadena.c:48:4: warning: implicit declaration of function 'BSP_GPIO_PinCfg'; did you mean 'IS_GPIO_PIN'? [-Wimplicit-function-declaration]
    BSP_GPIO_PinCfg(GPIOA, GPIO_PIN_6, GPIO_MODE_OUTPUT_PP,GPIO_NOPULL,GPIO_SPEED_FREQ_HIGH);
    ^~~~~~~~~~~~~~~
    IS_GPIO_PIN
../appli/cadena.c:51:4: warning: implicit declaration of function 'HC05_Init'; did you mean 'HAL_Init'? [-Wimplicit-function-declaration]
    HC05_Init();
    ^~~~~~~~~
    HAL_Init
../appli/cadena.c:59:15: warning: comparison between pointer and integer
    if(message == "connecter")
               ^~
../appli/cadena.c:59:15: warning: comparison with string literal results in unspecified behavior [-Waddress]
../appli/cadena.c:61:13: warning: assignment makes integer from pointer without a cast [-Wint-conversion]
     message = "";
             ^
../appli/cadena.c:75:15: warning: comparison between pointer and integer
    if(message == "verrouille")
               ^~
../appli/cadena.c:75:15: warning: comparison with string literal results in unspecified behavior [-Waddress]
../appli/cadena.c:78:13: warning: assignment makes integer from pointer without a cast [-Wint-conversion]
     message = "";
             ^
../appli/cadena.c:79:5: warning: implicit declaration of function 'delay' [-Wimplicit-function-declaration]
     delay(2000);
     ^~~~~
../appli/cadena.c:82:20: warning: comparison between pointer and integer
    else if(message == "badge")
                    ^~
../appli/cadena.c:82:20: warning: comparison with string literal results in unspecified behavior [-Waddress]
../appli/cadena.c:85:13: warning: assignment makes integer from pointer without a cast [-Wint-conversion]
     message = "";
             ^
../appli/cadena.c:89:20: warning: comparison between pointer and integer
    else if(message == "gps")
                    ^~
../appli/cadena.c:89:20: warning: comparison with string literal results in unspecified behavior [-Waddress]
../appli/cadena.c:94:15: warning: comparison between pointer and integer
    if(message == "déconnexion")
               ^~
../appli/cadena.c:94:15: warning: comparison with string literal results in unspecified behavior [-Waddress]
../appli/cadena.c:96:13: warning: assignment makes integer from pointer without a cast [-Wint-conversion]
     message = "";
             ^
../appli/cadena.c:138:16: error: invalid operands to binary == (have 'ISO14443A_CARD {aka struct <anonymous>}' and 'ISO14443A_CARD {aka struct <anonymous>}')
    if((badge_1 == card) || (badge_2 == card))
                ^~
../appli/cadena.c:138:37: error: invalid operands to binary == (have 'ISO14443A_CARD {aka struct <anonymous>}' and 'ISO14443A_CARD {aka struct <anonymous>}')
    if((badge_1 == card) || (badge_2 == card))
                                     ^~
../appli/cadena.c: In function 'CADENA_recuperation_message':
../appli/cadena.c:158:14: warning: initialization makes integer from pointer without a cast [-Wint-conversion]
  char info = "";
              ^~
../appli/cadena.c:164:10: warning: conversion to 'char' from 'int' may alter its value [-Wconversion]
   info = info + UART_getc(UART2_ID);
          ^~~~
make: *** [appli/cadena.o] Error 1
appli/subdir.mk:21: recipe for target 'appli/cadena.o' failed
